--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[![Actions Status](https://github.com/AlexanderIzmailov/frontend-project-12/workflows/hexlet-check/badge.svg)](https://github.com/AlexanderIzmailov/frontend-project-12/actions)",
   "main": "index.js",
   "scripts": {
+    "start": "start-server -s ./frontend/build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
